[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Track.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/TrainEngine.tscn" type="PackedScene" id=2]
[ext_resource path="res://Demo/Scenes/TestWorld.tscn" type="PackedScene" id=3]
[ext_resource path="res://Demo/Scripts/TestTracks1.gd" type="Script" id=4]

[sub_resource type="Curve2D" id=1]
resource_local_to_scene = true
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, -64, -127.665, -1.05946, 127.665, 1.05946, 576, -64, 0, 0, 0, 0, 704, 64, -1.05946, -128.195, 1.05946, 128.195, 704, 320, 0, 0, 0, 0, 576, 448, 127.136, -0.529732, -127.136, 0.529732, 0, 448, 0, 0, 0, 0, -128, 320, -1.05946, 127.136, 1.05946, -127.136, -128, 64, 0, 0, 0, 0, 0, -64 )
}

[node name="TestTracks1" type="Node2D"]
script = ExtResource( 4 )

[node name="TestWorld" parent="." instance=ExtResource( 3 )]

[node name="TrainEngine" parent="." instance=ExtResource( 2 )]
scale = Vector2( 0.999998, 1 )
max_force = 2500

[node name="Tracks" type="Node2D" parent="."]

[node name="TestRail" parent="Tracks" instance=ExtResource( 1 )]
position = Vector2( 256, 128 )
curve = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
